# heroic-gogdl

./: .gitignore  .gitmodules  README.md  gogdl_xdelta3.c  pyproject.toml  setup.py  zipapp_main.py
.github/workflows/: build.yaml
gogdl/: __init__.py  api.py  args.py  auth.py  cli.py  constants.py  imports.py  languages.py  launch.py  process.py  saves.py  utils.py  xdelta3.c
gogdl/dl/: dl_utils.py  linux.py  linux_native.py  manager.py  objects.py  progressbar.py  worker.py
gogdl/dl/managers/: dependencies.py  linux.py  manager.py  task_executor.py  v1.py  v2.py
gogdl/dl/objects/: generic.py  linux.py  v1.py  v2.py
gogdl/dl/workers/: linux.py  task_executor.py  v2.py
gogdl/xdelta/: __init__.py  objects.py  patcher.py
gogdl/xdelta3/: xdelta3.c
