[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogdl"
description = "GOG Downloading module for Heroic Games Launcher"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["GOG", "HGL", "Heroic Games Launcher", "Games"]
license = { text = "GPL-3" }
authors = [
  { name = "imLinguin", email = "lidwinpawel@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Games/Entertainment",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "setuptools",
  "requests"
]
dynamic = ["version"]

[project.scripts]
gogdl = "gogdl.cli:main"

[project.urls]
Issues = "https://github.com/Heroic-Games-Launcher/heroic-gogdl/issues"

[tool.setuptools.packages.find]
include = ["gogdl*"]

[tool.setuptools]
ext-modules = [
  {name = "gogdl.xdelta3", sources = ["gogdl/xdelta3.c", "xdelta3/xdelta3/xdelta3.c"], include-dirs = ["xdelta3"], extra-compile-args = ["-DSIZEOF_SIZE_T=8", "-DSIZEOF_UNSIGNED_INT=4", "-DSIZEOF_UNSIGNED_LONG=8", "-DSIZEOF_UNSIGNED_LONG_LONG=8", "-DXD3_USE_LARGEFILE64=1", "-DXD3_ENCODER=0", "-DSECONDARY_DJW=0", "-DSECONDARY_LZMA=0", "-DSHELL_TESTS=0"]}
]

[tool.setuptools.dynamic]
version = {attr = "gogdl.version"}
